changes in some files

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,9 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
+
+{% block content %}
+
+
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -43,3 +48,4 @@
 
   </body>
 </html>
+{% endblock %}
