--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,15 @@
     <title>"codemy lecture 1"</title>
   </head>
   <body>
+
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+    Hey {{name}}!! {{message}}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+
+    {% endfor %}
+
     <h1>hello world!!!</h1>
     <p>this is my first webpage</p>
     <p>my name is {{name}}</p>
