--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,6 +11,15 @@
           <a class="nav-link" href="{{url_for("user",name='Ali')}}">User Profile</a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for("name")}}">Name</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for("add_user")}}">Add User</a>
+        </li>
+
+
 
       </ul>
       <form class="d-flex" role="search">
