--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,9 +15,40 @@
           <a class="nav-link" href="{{url_for("name")}}">Name</a>
         </li>
 
+
+        <!-- #how to change the login button
+        #on the nav bar depending on whether you are logedin or not -->
+        {%  if current_user.is_authenticated %}
+          <li class="nav-item">
+          <a class="nav-link" href="{{url_for("logout")}}">Logout</a>
+          </li>
+
+          <li class="nav-item">
+          <a class="nav-link" href="{{url_for("dashboard")}}">DASHBOARD</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{url_for("add_user")}}">Register</a>
+          </li>
+
+          <li class="nav-item">
+          <a class="nav-link" href="{{url_for("login")}}">Login</a>
+          </li>
+
+        {% endif %}
+
         <li class="nav-item">
-          <a class="nav-link" href="{{url_for("add_user")}}">Add User</a>
+          <a class="nav-link" href="{{url_for("add_post")}}">Add Blog Post</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for("posts")}}">All Blog Posts</a>
+        </li>
+
+
+
+
+
 
 
 
