--- a/templates/post.html
+++ b/templates/post.html
@@ -16,18 +16,19 @@ Hey {{name}}!! {{message}}
 <br>
 
       <h2>{{ post.title }}</h2><br>
-      {{ post.author }}<br>
+      By: {{ post.poster.name }}<br>
       Slug : {{ post.slug }}<br>
       {{ post.date_posted}} <br>
       {{ post.content }}<br>
       <br>
 
       <a href="{{ url_for('posts' )}}" class="btn btn-outline-secondary btn-sm">Back</a>
-
+      {% if current_user.id == post.poster_id %}
       <a href="{{ url_for('edit_post' ,id=post.id )}}" class="btn btn-outline-secondary btn-sm">Edit</a>
 
       <a href="{{ url_for('delete_post' ,id=post.id )}}" class="btn btn-outline-danger btn-sm">Delete</a>
 
+      {% endif %}
       <hr><br>
 
 
