--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,6 +26,13 @@
           <li class="nav-item">
           <a class="nav-link" href="{{url_for("dashboard")}}">DASHBOARD</a>
           </li>
+          {% if current_user.id == 20 %}
+          <li class="nav-item">
+          <a class="nav-link" href="{{url_for("admin")}}">Admin</a>
+          </li>
+          {% endif %}
+
+
         {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{{url_for("add_user")}}">Register</a>
