--- a/templates/post.html
+++ b/templates/post.html
@@ -19,7 +19,7 @@ Hey {{name}}!! {{message}}
       By: {{ post.poster.name }}<br>
       Slug : {{ post.slug }}<br>
       {{ post.date_posted}} <br>
-      {{ post.content }}<br>
+      {{ post.content|safe }}<br>
       <br>
 
       <a href="{{ url_for('posts' )}}" class="btn btn-outline-secondary btn-sm">Back</a>
