--- a/templates/search.html
+++ b/templates/search.html
@@ -2,13 +2,42 @@
 
 {% block content %}
 <br>
-<h2>you searched for :</h2>
-<p>{{ searched }}</p>
+<h2>you searched for : <em>{{ searched }}</em></h2>
+<p></p>
 <br>
+
+{% if posts %}
 {% for post in posts %}
 
-    <a href="{{ url_for('post' , id = post.id) }}">{{ post.title }}</a>
+<h2>{{ post.title }}</h2>
+ By :{{ post.poster.name }}<br>
+Slug : {{ post.slug }}<br>
+{{ post.date_posted}} <br>
+{{ post.content|safe }}<br>
+
+<br>
+<a href="{{ url_for('post' ,id=post.id )}}" class="btn btn-outline-secondary btn-sm">View Post</a>
+
+
+{% if current_user.id == post.poster.id %}
+
+<a href="{{ url_for('edit_post' ,id=post.id )}}" class="btn btn-outline-secondary btn-sm">edit Post</a>
+
+<a href="{{ url_for('delete_post' ,id=post.id )}}" class="btn btn-outline-danger btn-sm">Delete</a>
+
+
+{% endif %}
+<hr><br>
+
 
 {% endfor %}
+
+{% else %}
+sorry your search <strong>{{ searched }}</strong> was not found!!
+
+
+{% endif %}
+
+
 
 {% endblock %}
